# mlr_cource_work

./: .gitignore  README.md  environment.yml
aliengo_gym_deploy/envs/: history_wrapper.py  lcm_agent.py
aliengo_gym_deploy/scripts/: deploy_policy.py
aliengo_gym_deploy/utils/: HDF5_recorder.py  cheetah_state_estimator.py  command_profile.py  deployment_runner.py  generate_path.py
legged_gym.egg-info/: SOURCES.txt  top_level.txt
legged_gym/envs/: __init__.py
legged_gym/envs/aliengo/: aliengo_amp.py  aliengo_amp_config.py  aliengo_residual_config.py
legged_gym/envs/base/: legged_robot.py
legged_gym/scripts/: play.py  play_manual.py  play_manual_copy.py  vis.sh
legged_gym/utils/: helpers.py  logger.py  task_registry.py
logs/aliengo_amp/exported/policies/: policy_1.pt
logs/aliengo_amp/video_limp/exported_onnx_s1/: actor.onnx
logs/aliengo_amp/video_limp/exported_s1/: actor.pt
logs/aliengo_amp/video_limp_ft/: amp_config.py
logs/aliengo_amp_deploy/2025/12_12/13_33_01_0/: log.pkl
logs/aliengo_residual/residual_run_highspeed/: legged_robot.py  metrics.csv  model_2000.pt  model_20000.pt  params.json
logs/aliengo_residual_deploy/2025/12_12/16_00_48_0/: log.pkl
rl/rl_algorithms/encode_vel/runners/: amp_on_policy_runner.py  on_policy_runner.py
rl/rl_algorithms/proprio_base/algorithms/: __init__.py  ppo.py  residual_ppo.py
rl/rl_algorithms/proprio_base/modules/: __init__.py  actor_critic.py  actor_critic_residual.py
rl/rl_algorithms/proprio_base/runners/: __init__.py  amp_on_policy_runner.py  nav_on_policy_runner.py  on_policy_runner.py  residual_on_policy_runner.py
rl/rl_algorithms/proprio_base/storage/: rollout_storage.py  rollout_storage_residual.py
unitree_legged_sdk/: .gitignore  CMakeLists.txt  HDF5_recorder.h  MessageA.hpp  MessageB.hpp  T265_reader.h  lcm_position.cpp  mocap_track.py  plot_motor_data.py  pub  pub.cpp  sub  sub.cpp  test.cpp  trajectory_1.txt
unitree_legged_sdk/dataset/20250917_153807/: 0.hdf5
unitree_legged_sdk/dataset/20251003_160407/: 0.hdf5
unitree_legged_sdk/example_py/: example_position.py
unitree_legged_sdk/examples/: aliengo_gait_controller.cpp  example_dynamic_aliengo.cpp  example_pd_variation.cpp  example_position_aliengo.cpp  example_torque_aliengo.cpp  example_torque_test.cpp
unitree_legged_sdk/include/lcm_types/: PositionGravityState.hpp  README.txt  foot_contact_t.hpp  foot_contact_t.lcm  imu_state_t.hpp  imu_state_t.lcm  motor_cmd_t.hpp  motor_cmd_t.lcm  motor_raw_state_t.hpp  motor_raw_state_t.lcm  motor_state_t.hpp  motor_state_t.lcm  pd_tau_targets_lcmt.hpp  pd_tau_targets_lcmt.lcm
unitree_legged_sdk/tx2/: camera_lcm_msgs_PositionGravityState.c  camera_lcm_msgs_PositionGravityState.h
unitree_legged_sdk/v1/: camera_lcm_msgs.cpp  camera_lcm_msgs.lcm  lcm_position.cpp
unitree_legged_sdk/v1/camera_lcm_msgs/: PositionGravityState.hpp
